css/index.css
/* Use your own code or past solution for Great Idea Web Page CSS here! */

/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

/* Set every element's box-sizing to border-box */
* {
    box-sizing: border-box;
}

html, body {
    height: 100%;
    font-family: 'Titillium Web', sans-serif;
}

h1, h2, h3, h4, h5 {
    font-family: 'Bangers', cursive;
    letter-spacing: 1px;
    margin-bottom: 15px;
}

/* Your code starts here! */

* {
	margin: 0 auto;
	max-width: 1100px;
}

@media (max-width: 800px) {
	h1 {
		color: blue;
	}

	nav {
		max-width: 600px;
	}

	.content-box img {
		display: none;
	}
}

@media (max-width: 500px) {
	h1 {
		color: red;
	}

	.content-box img {
		display: none;
	}

	nav {
		flex-direction: column-reverse;
		align-items: center;
	}
}

.nav {
	display: flex;
	justify-content: center;

}

.nav img {
	height: 40px;
	width: 220px;
}

nav {
	color: gray;
	margin: 5px;
	padding: 5px;
	max-width: 900px;
	display: flex;
} 

nav a {
	padding: 45px;
}

.headertext {
	text-align: center;
	/* border: 2px solid red; */
	font-size: 80px;
}

.button {
	border: 1px solid black;
	margin: 0px 0px 0px 30%;
	padding: 5px;
	text-align: center;
	width: 40%;
}
 
.text {
	display: block;
}

hr {
	margin: 0px 0px 0px 10px;
}

.container {
	padding: 0px 20px 0px 20px;
}

.content-box {
	/* border: 2px solid red; */
	margin: 5px;
	padding: 5px;
	width: 525px;
	display: inline-block;
  }

.top-section {
	/* border: 2px solid red; */
}

  .lower-box {
	/* border: 2px solid blue; */
	margin: 5px;
	padding: 5px;
	width: 330px;
	display: inline-block;
  }

  .middle img {
	  display: block;
	  width: 100%
  }

.contact {
	margin: 5px;
	padding: 5px;
	width: 300px;	
}

  .copyright {
	  display: block;
	  text-align: center;
  }

  .middle-img {
	  width: 800px;
  }

